unpackaged/main/default/objects/CommSubscriptionConsent/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Subscription Consents</relationshipLabel>
    <relationshipName>CommunicationSubscriptionConsents</relationshipName>
    <type>Lookup</type>
</CustomField>