unpackaged/main/default/objects/CommSubscriptionConsent/fields/CapturedByClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>CapturedByClientAdvisor__c</fullName>
    <description>Code of the Client Advisor</description>
    <label>CapturedByClientAdvisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>