unpackaged/main/default/objects/CommSubscriptionConsent/fields/ClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ClientAdvisors linked to that subscription</description>
    <label>ClientAdvisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Communication_Subscription_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>