unpackaged/main/default/objects/CommSubscriptionConsent/fields/CommunicationSend__c.field-meta.xml
<CustomField>
    <fullName>CommunicationSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommunicationSend</label>
    <type>Checkbox</type>
</CustomField>