unpackaged/main/default/objects/CommSubscriptionConsent/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>country linked to that subscription</description>
    <label>country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>