unpackaged/main/default/objects/CommSubscriptionConsent/fields/LastCommunicationSend__c.field-meta.xml
<CustomField>
    <fullName>LastCommunicationSend__c</fullName>
    <description>This field is used to specify the last communication send by SFMC</description>
    <label>LastCommunicationSend</label>
    <type>Date</type>
</CustomField>