unpackaged/main/default/objects/CommSubscriptionConsent/fields/locale__c.field-meta.xml
<CustomField>
    <fullName>locale__c</fullName>
    <description>The local linked to that subscription</description>
    <label>locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>