unpackaged/main/default/objects/CommSubscriptionConsent/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <description>The product sku linked to this subscription</description>
    <label>sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>