unpackaged/main/default/objects/CommSubscriptionConsent/fields/storecode__c.field-meta.xml
<CustomField>
    <fullName>storecode__c</fullName>
    <description>Store Code linked to this subscription</description>
    <label>storecode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>