unpackaged/main/default/objects/CommSubscriptionConsent/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>The Warehouse linked to that Subscription</description>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>