unpackaged/main/default/objects/CommSubscriptionConsent/listViews/All_CommSubscriptionConsents.listView-meta.xml
<ListView>
    <fullName>All_CommSubscriptionConsents</fullName>
    <columns>EffectiveFromDate</columns>
    <columns>EffectiveToDate</columns>
    <columns>ConsentCapturedDateTime</columns>
    <columns>ConsentCapturedSource</columns>
    <columns>Id</columns>
    <columns>CommSubscriptionChannelType</columns>
    <columns>Name</columns>
    <filterScope>Everything</filterScope>
    <label>All Communication Subscription Consents</label>
</ListView>